fix: add viewport meta tag to fix mobile font size

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Robin Métral</title>
     <link href="./css/index.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <div id="layout">
